Search Engine Optimization tab link now goes to the correct section on the page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Section tag and class "content" pertains to the content of the page , has 3 sections with class, and 3 article classes -->
         <section class="content">
             <!-- Search Engine Opitimization article section -->
-            <article class="search-engine-optimization">
+            <article id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization Image" />
                     <h2>Search Engine Optimization</h2>
                         <p>
